# brick-breaker

./: CMakeLists.txt  README.md
data/levels/: level1.lvl  level2.lvl  level3.lvl
include/: ball.hpp  brick.hpp  brick_breaker.hpp  check_collisions.hpp  debug.hpp  game.hpp  gui.hpp  level.hpp  paddle.hpp  powerup.hpp
src/: CMakeLists.txt  ball.cpp  brick.cpp  brick_breaker.cpp  check_collisions.cpp  debug.cpp  game.cpp  gui.cpp  level.cpp  main.cpp  paddle.cpp  powerup.cpp
tests/: CMakeLists.txt  test_brick_breaker.hpp  tests.cpp
